@@ -122,6 +122,16 @@
             a nice thing about DbVisualizer is a diagram view of a database displaying
             tables and the foreign key relationships between them.</td>
         </tr>
+        <tr>
+          <td class="linksLogo"> <a href="http://www.dbsolo.com/">
+            <img src="images/logoDBSolo.gif" border="0" alt="DbVisualizer" class="linksLogo">
+            </a> </td>
+          <td class="linksDescription"> DB Solo is a powerful yet affordable
+            cross-platform database development and management tool for both
+            developers and administrators. It allows users to explore and
+            manage database objects as well as execute ad-hoc queries. DB Solo
+            supports most operating systems and DBMS products.</td>
+        </tr>
       </table>
 
 
